--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "run-build": "babel-node build/server.js",
-    "start": "nodemon --exec babel-node ./bin/server.js",
-    "build-src": "babel src -d build --copy-files",
-    "build": "node build/bin/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node ./bin/server.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
