--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node ./bin/server.js"
+    "start": "node ./bin/server.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -12,24 +12,16 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "cron": "^1.8.2",
-    "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
     "gulp-debug": "^3.2.0",
-    "handlebars": "^4.7.7",
-    "handlebars-helpers": "^0.5.8",
-    "hbs": "^4.1.2",
     "helmet": "^7.1.0",
     "is-empty": "^1.2.0",
     "joi": "^17.4.1",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "~1.9.1",
-    "nodemon": "^3.1.4",
-    "pm2": "^5.4.2",
+    "morgan": "^1.10.0",
     "winston": "^3.15.0"
   },
   "devDependencies": {
@@ -38,11 +30,8 @@
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.24.0",
     "babel-eslint": "^10.1.0",
-    "btoa": "^1.2.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "express-useragent": "^1.0.15",
-    "gulp": "^5.0.0"
+    "eslint-plugin-import": "^2.22.0"
   }
 }
