--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,2 @@
-/.idea
-/node_modules
-/package-lock.json
-/logs
-/.env
-/gulpfile.js
-/src/public/uploads/avatar
-/.DS_Store
-/src/.DS_Store
-/src/public/.DS_Store
-/src/public/files/.DS_Store
-/src/public/uploads/.DS_Store
-/src/public/uploads/bank_logos/.DS_Store
-.vscode
-/src/utils/dataSample/prompts.json
-/src/public/uploads/*
-/src/public/google/*
-!/src/public/uploads/.gitkeep
-/src/public/files/*
-!/src/public/files/.gitkeep
-!/src/public/uploads/mail
-/src/configs/tokens/*
-!/src/configs/tokens/.gitkeep
-*.DS_Store
-*.lock
+node_modules
+.env
