--- a/package.json
+++ b/package.json
@@ -1,37 +1,18 @@
 {
-  "name": "apiVekin",
-  "version": "0.0.0",
-  "private": true,
+  "name": "webhook-in-nodejs",
+  "version": "1.0.0",
+  "description": "webhook in nodejs using express framework - whatsapp cloud api",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/server.js"
+    "start":"node index.js"
   },
+  "author": "Prasath from PMS",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
-    "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.1",
-    "express-ejs-extend": "0.0.1",
-    "express-session": "^1.17.3",
-    "express-validator": "^6.14.1",
-    "gulp-debug": "^3.2.0",
-    "helmet": "^7.1.0",
-    "is-empty": "^1.2.0",
-    "joi": "^17.4.1",
-    "morgan": "^1.10.0",
-    "winston": "^3.15.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.24.0",
-    "@babel/node": "^7.23.9",
-    "@babel/preset-env": "^7.24.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
   }
 }
