--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
   "author": "Prasath from PMS",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "axios": "^1.6.2",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.18.1",
+    "express-ejs-extend": "0.0.1",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.1",
+    "gulp-debug": "^3.2.0",
+    "helmet": "^7.1.0",
+    "is-empty": "^1.2.0",
+    "joi": "^17.4.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
