--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "webhook-in-nodejs",
   "version": "1.0.0",
   "description": "webhook in nodejs using express framework - whatsapp cloud api",
-  "main": "./bin/server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "start": "node ./bin/server.js"
+    "start":"node index.js"
   },
   "author": "Prasath from PMS",
   "license": "ISC",
