--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+   "start": "node ./bin/server.js"
   },
   "author": "Prasath from PMS",
   "license": "ISC",
@@ -21,7 +21,6 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
     "gulp-debug": "^3.2.0",
-    "helmet": "^7.1.0",
     "is-empty": "^1.2.0",
     "joi": "^17.4.1",
     "morgan": "^1.10.0",
