--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.4.1",
     "moment-timezone": "^0.5.46",
     "morgan": "^1.10.0",
+    "stripe": "^17.2.1",
     "winston": "^3.15.0"
   },
   "devDependencies": {
