--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
     "gulp-debug": "^3.2.0",
+    "i": "^0.3.7",
     "is-empty": "^1.2.0",
     "joi": "^17.4.1",
+    "js-base64": "^3.7.7",
     "moment-timezone": "^0.5.46",
     "morgan": "^1.10.0",
+    "npm": "^10.9.0",
     "stripe": "^17.2.1",
     "winston": "^3.15.0"
   },
