--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "canvas": "^2.11.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
