--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-base64": "^3.7.7",
     "moment-timezone": "^0.5.46",
     "morgan": "^1.10.0",
+    "node-html-to-image": "^5.0.0",
     "npm": "^10.9.0",
     "stripe": "^17.2.1",
     "winston": "^3.15.0"
