--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "whatsapp-cloud-api",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "description": "webhook in nodejs using express framework - whatsapp cloud api",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +15,7 @@
     "axios": "^1.6.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "canvas": "^2.11.2",
+    "canvas": "2.11.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
