--- a/.env.default
+++ b/.env.default
@@ -11,3 +11,4 @@ KEY_STRIPE = sk_test_51QCZlt2LB1xmFw9BPr6qfcYgp49uOLs5G1uhWCcnUHyDQb2L1UUVRB2sTX
 PHONE_WHATSAPP= +6627142490
 GOOGLE_MAP_KEY = AIzaSyC0maeFBMYF2Lp4OoD5rq263nRaEgkdb9E
 URL = https://api-wekin-5300daa06a95.herokuapp.com
+TEMPLATE_CONFIRM_PAYMENT = confirm_payment
